@@ -15,6 +15,7 @@ Contributors: Pistos
 - Added view.non_search_area.format.
 - Fixed cursor stack.
 - Cursor stack is now global (cross-buffer).
+- Simplified switch_to_next_buffer and switch_to_prev_buffer; no more history.
 - Various refactorings.
 - Various bug fixes.
 
